# geoglows_ecflow

./: .gitignore  LICENSE  MANIFEST.in  README.md  environment.yml  pyproject.toml
ecflow/: calc_next_init.py  client.py  head.h  iprep_ecf.py  run_rapid_template.def
geoglows_ecflow/: client.py  geoglows_forecast_job.py  utils.py
geoglows_ecflow/ecflow/: client.py  create_geoglows_forecast_job.py  geoglows_forecast_template.def  run_ecflow.py
geoglows_ecflow/resources/: archive_to_aws.py  calc_next_init.py  call_concat_vpu_ensembles.py  combine_esri_tables.py  compute_init_flows.py  concat_forecast_warnings.py  constants.py  day_one_forecast.py  generate_esri_table.py  helper_functions.py  iprep_ecf.py  netcdf_to_zarr.py  prep_rapid_forecast.py  run_ecflow.py  run_rapid_forecast.py  spt_extract_plain_table.py  to_zarr.py
geoglows_ecflow/resources/RAPIDpy/: dataset.py  helper_functions.py  postprocess_merge.py  rapid.py
geoglows_ecflow/resources/shell_scripts/: concat_vpu_ensembles.sh  concat_vpu_qout.sh
geoglows_ecflow/workflow/: create.py  geoglows_forecast_job.py
geoglows_ecflow/workflow/builders/: base.py  builder.py
geoglows_ecflow/workflow/comfies/: config.py  fs.py  memoize.py  ooflow.py  sdeploy.py  sjob.py  templating.py  version.py  visitor.py
geoglows_ecflow/workflow/comfies/data/sjob/: README.TXT  default  lxc
geoglows_ecflow/workflow/parts/: admin.py  epilogs.py  nodes.py  packages.py  repeats.py  start.py  times.py
geoglows_ecflow/workflow/scripts/common/: comfies.h  conda.h  deploy_config.h  ecflow_bash.h  ecfs.h  ecmwf-toolbox.h  ecpds.h  gdal.h  git.h  mars.h  nco.h  netcdf.h  openmpi.h  petsc.h  python3.h  scripts.h  ymd.ecf
geoglows_ecflow/workflow/scripts/rapid/: arch_fc.ecf  arch_init.ecf  archive_qinit.ecf  archive_to_aws.ecf  build_petsc.ecf  build_rapid.ecf  build_venv.ecf  check_mars.ecf  clean.ecf  combine_forecast_warnings.ecf  combine_plain_table.ecf  comp_init.ecf  day_one.ecf  diss.ecf  ens_member.ecf  initialize.ecf  install_package.ecf  nc_to_zarr.ecf  nco_calc.ecf  plain_table.ecf  prep_task.ecf  rapid.h  rapid_venv.h  remove_conda.h  retrieve_ens.ecf  retrieve_hres.ecf  sim.h  sim_%CONTEXT%.h  sim_ens.h  sim_hres.h  sleep.ecf  suite.h  toggles.ecf  web_push.ecf
geoglows_ecflow/workflow/scripts/troika/: qsub.h
geoglows_ecflow/workflow/suites/builders/: base.py  builder.py
geoglows_ecflow/workflow/suites/comfies/: dateandtime.py  partition.py  py2.py  sdeploy.py
geoglows_ecflow/workflow/suites/scripts/common/: cdo.h  dummy.ecf  gnuparallel.h  install_package.ecf  newdate.h  par.h  qsub.h
geoglows_ecflow/workflow/suites/scripts/rapid/: bc.ecf  ens.h  install_static_data.ecf
tests/files/: mock_config_test.yml  mock_defs_novar.def
tests/unit_test/: test_client.py  test_geoglows_forecast_job.py  test_utils.py
